# wib-software-2025-llc

./: README.md
whereitbelongs/: .gitignore  Cargo.toml  README.md
whereitbelongs/core/: Cargo.toml
whereitbelongs/core/assets/: signatures.json
whereitbelongs/core/src/: lib.rs  quarantine.rs  scan.rs  unrat.rs
whereitbelongs/database/: Cargo.toml
whereitbelongs/database/src/: lib.rs  models.rs  store.rs
whereitbelongs/services/: Cargo.toml
whereitbelongs/services/src/: firewall.rs  lib.rs  netmon.rs  realtime.rs  updater.rs
whereitbelongs/src-tauri/: Cargo.toml  tauri.conf.json
whereitbelongs/src-tauri/src/: main.rs
whereitbelongs/tests/: Cargo.toml
whereitbelongs/tests/src/: db_auth.rs  engine_scan.rs  lib.rs
whereitbelongs/ui/: index.html  package.json  tsconfig.json  vite.config.ts
whereitbelongs/ui/src/: App.vue  main.ts  router.ts  styles.css
whereitbelongs/ui/src/views/: Account.vue  Firewall.vue  Home.vue  Privacy.vue  Scan.vue  Settings.vue  Tools.vue  Unrat.vue
