[package]
name = "wib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
sha2 = "0.10"
rayon = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
dirs = "5"